Add java 17 preview image